# uv-lock-bug-minimal-example

./: README.md  reproduce_bug.sh  reset.sh
.devcontainer/: devcontainer.json
example-app/: main.py  pyproject.toml
example-lib/: pyproject.toml
example-lib/src/example_lib/: __init__.py
scripts/: example-script.py
