[project]
name = "example-lib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Weidav", email = "66092635+Weidav@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "pydantic==1.10.26",
]

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"
